<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/trendingMovieFragment"
        android:icon="@drawable/ic_movie_black_24"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_live_tv_black_24"
        android:title="@string/title_tv" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/title_favorite" />

</menu>